@@ -28,10 +28,9 @@
 
 (define-minor-mode rails-fixture-minor-mode
   "Minor mode for RubyOnRails fixtures."
-  nil
-  " fixture"
-  nil
-  (setq rails-primary-switch-func (lambda() (interactive) (rails-model-layout:switch-to :unit-test)))
+  :lighter " Fixture"
+  :keymap (rails-model-layout:keymap :fixture)
+  (setq rails-primary-switch-func 'rails-model-layout:switch-to-unit-test)
   (setq rails-secondary-switch-func 'rails-model-layout:menu))
 
 (provide 'rails-fixture-minor-mode)
